chgmgmt_build/src/objects/feedback360__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailReturnAlreadyFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>フィードバック返却済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmployeeName__c</fullName>
        <formula>PDS__r.Employee__r.Name &amp; &quot; &quot; &amp; PDS__r.Employee__r.FirstName__c</formula>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>X360</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalReviewer__c</fullName>
        <label>External Reviewer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedbackPreferredDate__c</fullName>
        <label>フィードバック返却希望日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FeedbackReturnDate__c</fullName>
        <label>フィードバック返却日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InternalReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Reviewer</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>360度フィードバック</relationshipLabel>
        <relationshipName>feedback360</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_External__c</fullName>
        <label>Internal/External</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverallFeedback__c</fullName>
        <label>総合的なフィードバック</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PDS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>業績目標／パフォーマンス評価</label>
        <referenceTo>PDS__c</referenceTo>
        <relationshipLabel>360度フィードバック</relationshipLabel>
        <relationshipName>PDS_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <label>Q1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <label>Q2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <label>Q3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>X3601</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>360度フィードバック</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>FB-{0000000}</displayFormat>
        <label>360FB_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Request</fullName>
        <active>true</active>
        <label>依頼</label>
    </recordTypes>
    <recordTypes>
        <fullName>Response</fullName>
        <active>true</active>
        <label>回答</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>